tests/covariance/covariance.exp
Error: test.js:2
  2: var b: CovArrayVerbose<number,*> = [];
                                        ^^ empty array literal
  4: y[0] = ""; // error
            ^^ string. This type is incompatible with the bound on type parameter `Y`:
  2: var b: CovArrayVerbose<number,*> = [];
                            ^^^^^^ number

Error: test.js:3
  3: var y: CovArrayVerbose<mixed,*> = b;
                                       ^ CovArrayVerbose. Has some incompatible type argument with
  3: var y: CovArrayVerbose<mixed,*> = b;
            ^^^^^^^^^^^^^^^^^^^^^^^^ CovArrayVerbose
  Type argument `X` is incompatible:
      2: var b: CovArrayVerbose<number,*> = [];
                                ^^^^^^ number. This type is incompatible with
      3: var y: CovArrayVerbose<mixed,*> = b;
                                ^^^^^ mixed

Error: test.js:8
  8:     foo(): CovArrayVerbose<mixed,I> { return this.x; }
                                                  ^^^^^^ CovArrayVerbose. This type is incompatible with the expected return type of
  8:     foo(): CovArrayVerbose<mixed,I> { return this.x; }
                ^^^^^^^^^^^^^^^^^^^^^^^^ CovArrayVerbose
  Type argument `X` is incompatible:
      7:     x: CovArrayVerbose<E,I>;
                                ^ some incompatible instantiation of `E`. This type is incompatible with
      8:     foo(): CovArrayVerbose<mixed,I> { return this.x; }
                                    ^^^^^ mixed

Error: test.js:13
 13: (nv.x[0]: string); // error
      ^^^^^^^ number. This type is incompatible with
 13: (nv.x[0]: string); // error
               ^^^^^^ string

Error: test.js:14
 14: (nv.foo()[0]: string); // error
      ^^^^^^^^^^^ number. This type is incompatible with
 14: (nv.foo()[0]: string); // error
                   ^^^^^^ string


Found 5 errors
